--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -2,9 +2,16 @@
     background-color: black;
 }
 
-h1,
 p {
     color: white;
+}
+
+h1 {
+    color: white;
+    text-transform: uppercase;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 img {
