--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -10,8 +10,8 @@ h1 {
     color: white;
     text-transform: uppercase;
     font-family: "Libre Baskerville", serif;
-    font-weight: 400;
     font-style: normal;
+    font-size: 2rem;
 }
 
 img {
@@ -22,5 +22,6 @@ img {
 div {
     width: 50%;
     margin-left: 25%;
+    margin-top: 100px;
     text-align: center;
 }
