--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -1,15 +1,3 @@
-body {
-  font-family: "Poppins", sans-serif;
-  margin: 50px 50px 0 50px;
-  background-color: #faf9f6;
-  display: flex;
-  flex-direction: column;
-  min-height: 95vh;
-}
-.main {
-  flex: 1;
-}
-
 h1 {
   font-size: 5rem;
 }
@@ -17,5 +5,18 @@ h1 {
 footer {
   text-align: right;
   color: midnightblue;
+  clear: right;
 }
 
+.images {
+  display: inline-block;
+}
+
+.right {
+  float: left;
+}
+
+.tile-image {
+  width: 200px;
+  height: 200px;
+}
